# agentic-rag-ecommerce

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini
.claude/: .mcp.json  CLAUDE.md  settings.json
.claude/agents/: ai-expert.md  devops-expert.md  python-expert.md  security-expert.md  testing-expert.md
.claude/rules/: agent-config.md  code-quality.md  coding-standards.md  command-execution.md  communication.md  design-principles.md  git-conventions.md  testing.md
.claude/workflows/: develop-feature.js  run-tests.js
.github/: copilot-instructions.md
.github/agents/: ai-expert.agent.md  devops-expert.agent.md  python-expert.agent.md  security-expert.agent.md  testing-expert.agent.md
.github/rules/: code-quality.md  coding-standards.md  project-overview.md  security.md
.github/workflows/: create-decision-record.md  develop-feature.md  run-tests.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_ingestion_tracking.py
docker/alloy/: config.alloy
docker/app/: Dockerfile  entrypoint.sh
docker/loki/: local-config.yaml
docker/prometheus/: prometheus.yml
docker/rabbitmq/: rabbitmq.conf
docs/: 05-IMPLEMENTATION-PLAN.md  PLAN.md  README.md  SALEOR-APP-WEBHOOK-SETUP.md
docs/analysis/: 00-SALEOR-APP-WEBHOOK-SETUP.md  01-USE-CASE-ANALYSIS.md  02-REQUIREMENTS-SPECIFICATION.md  03-PHASE4-PROJECT-SCAFFOLD.md  03-PROJECT-SCAFFOLD.md  04-MULTI-AGENT-ARCHITECTURE-DESIGN.md  05-IMPLEMENTATION-PLAN.md  06-OBSERVABILITY-DESIGN.md  07-OBSERVABILITY-IMPLEMENTATION-PLAN.md
docs/diagrams/: 01-use-case-overview.mermaid  02-system-context.mermaid  03-customer-chat-sequence.mermaid  04-webhook-sync-sequence.mermaid  05-agent-workflow.mermaid
history/: 10_0_0_CLEANUP_TASKS.md  11_0_0_TREND_SCOUT.md  12_13_0_SYNTHESIZE_TITLE_IMAGE.md  14_0_0_CHAT_SSE_ENDPOINT.md  15_0_0_FIX_RERANK_STRUCTURED_OUTPUT.md  15_0_0_LANGSMITH_TRACING.md  16_0_0_FIX_GENERATION_PIPELINE.md  16_0_0_LOG_PIPELINE_ALLOY.md  16_1_0_SWITCH_TO_GPT_IMAGE_2.md  17_0_0_METRICS_EXPANSION.md  18_0_0_GRAFANA_DASHBOARDS.md  18_0_1_DEPLOYMENT_FIXES.md  1_0_0_INITIAL_PROJECT_SETUP.md  4_0_0_PRODUCT_RAG_SUBAGENT.md  5_0_0_SHARED_RESOURCE_INJECTION.md  6_0_0_RAG_INGESTION.md  7_0_0_WEBHOOK_HANDLING.md  8_0_0_THREAD_MANAGEMENT_API.md  9_0_0_PROFILE_AND_ADMIN_API.md
scripts/: decode_token.py  setup_saleor_webhook.py
scripts/aws/: setup-lock-table.sh  setup-state-bucket.sh
src/app/: config.py  dependencies.py  main.py  rate_limit.py
terraform/: .terraform.lock.hcl  README.md  backend.example.tfvars  backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
tests/: conftest.py
tests/integration/: conftest.py  test_admin.py  (+18 more)
(+168 files in other folders)
