[project]
name = "agentic-rag-ecommerce"
version = "0.1.0"
description = "AI POD Stylist & Recommendation System"
requires-python = "==3.12.*"
dependencies = [
    # Web (FastAPI >= 0.135.0 includes built-in SSE via fastapi.sse)
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "httpx==0.28.1",
    # LangGraph / LangChain
    "langgraph==1.2.2",
    "langgraph-checkpoint-postgres==3.1.0",
    "langchain==1.3.2",
    "langchain-openai==1.2.2",
    "langchain-community==0.4.2",
    "langsmith==0.8.8",
    # LlamaIndex
    "llama-index-core==0.14.22",
    "llama-index-vector-stores-qdrant==0.10.1",
    "llama-index-embeddings-openai==0.6.0",
    "llama-index-retrievers-bm25==0.7.1",
    "openinference-instrumentation-llama-index==4.4.2",
    # OpenAI
    "openai==2.40.0",
    # Databases
    "psycopg[binary,pool]==3.3.4",
    "psycopg-pool==3.3.1",
    "asyncpg==0.31.0",
    "qdrant-client==1.18.0",
    # Migrations (raw SQL via op.execute — no ORM models)
    "alembic==1.18.4",
    # Cache / Tasks
    "redis==8.0.0",
    "celery==5.6.3",
    "aiohttp==3.14.0",
    # Storage / Search
    "boto3==1.43.19",
    "tavily-python==0.7.25",
    "duckduckgo-search==8.1.1",
    # Auth
    "PyJWT==2.13.0",
    "cryptography==48.0.0",
    # Rate limiting / Caching
    "slowapi==0.1.9",
    "fastapi-cache2==0.2.2",
    # Observability
    "structlog==25.5.0",
    "prometheus-fastapi-instrumentator==8.0.0",
    # Core
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "tenacity==9.1.4",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.15",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "respx==0.23.1",
    "fakeredis==2.36.0",
    "pre-commit==4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "ruff==0.15.15",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "respx==0.23.1",
    "fakeredis==2.36.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "httpx2>=2.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/app --cov-report=term-missing --cov-fail-under=80"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
include = ["src", "tests"]
exclude = ["**/__pycache__"]
